<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.chengwei.project_v2.ProfileAddActivity">
    <ImageButton
        android:id="@+id/btn_editPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
    <ImageButton
        android:id="@+id/btn_manageDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_preferences"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />
    <!--photo-->
    <ImageView
        android:id="@+id/ImgView_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias="0.502" />
    <!--Name-->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:hint="@string/instruction_name"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImgView_photo" />
    <!--Birthday-->
    <EditText
        android:id="@+id/editTextBirthday"
        android:textSize = "20sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/instruction_birth"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />
    <!--Phone-->
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:digits="@string/phone_number"
        android:hint="@string/instruction_phone"
        android:inputType="phone"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBirthday" />
    <!--Address-->
    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:hint="@string/instruction_addr"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
    <!--Room-->
    <EditText
        android:id="@+id/editTextRoom"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="12dp"
        android:hint="enter group number"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <!--birthday-->
    <DatePicker
        android:id="@+id/pickBirthday"
        android:textSize = "20sp"
        android:layout_width="260dp"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="12dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-2dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextRoom" />
    <!--ic_name-->
    <ImageView
        android:id="@+id/ic_namecard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_namecard"
        app:layout_constraintRight_toLeftOf="@+id/editTextName"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="105dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.111" />
    <!--ic_phone-->
    <ImageView
        android:id="@+id/ic_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_phone"
        app:layout_constraintRight_toLeftOf="@+id/editTextPhone"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_namecard"
        app:layout_constraintHorizontal_bias="0.0" />
    <!--ic_address-->
    <ImageView
        android:id="@+id/ic_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_home"
        app:layout_constraintRight_toLeftOf="@+id/editTextAddress"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_phone"
        app:layout_constraintHorizontal_bias="0.0" />
    <!--ic_address-->
    <ImageView
        android:id="@+id/ic_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_group"
        app:layout_constraintRight_toLeftOf="@+id/editTextAddress"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_address"
        app:layout_constraintHorizontal_bias="0.0" />
    <!--ic_birthday-->
    <ImageView
        android:id="@+id/ic_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_cake"
        app:layout_constraintRight_toLeftOf="@+id/pickBirthday"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@+id/ic_address" />

    <!--save change-->
    <Button
        android:id="@+id/btn_saveProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/ic_check_24dp"
        android:onClick="save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="85dp" />
    <!--cancel change-->
    <Button
        android:id="@+id/btn_cancelProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/ic_cancel_24dp"
        android:onClick="cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
